crates/schema/tests/compile_fail/derive_schema_struct_generic.rs
//! `#[derive(Schema)]` rejects generic structs too (the struct path shares the
//! same `OnceLock`-per-monomorphization hazard as the enum path).

use nebula_schema::Schema;

#[derive(Schema)]
struct Bad<T> {
    field: T,
}

fn main() {}
