crates/schema/tests/compile_fail/derive_schema_struct_generic.stderr
error: #[derive(Schema)] does not support generic type parameters: the generated `schema()` caches one `OnceLock` shared across every monomorphization, so all but the first `T` would get the wrong schema. Implement `HasSchema` by hand for generic types.
 --> tests/compile_fail/derive_schema_struct_generic.rs:7:12
  |
7 | struct Bad<T> {
  |            ^
